--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,13 +1,12 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 // bower:scss
-@import "_customVariables";
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
 
-$background-color: #474747;
+$background-color: #FFFFFF;
 
 body {
-  padding-top: 200px;
+  padding-top: 40px;
   background-color: $background-color;
   color: $gray_light;
 }
@@ -17,4 +16,8 @@ body {
 }
 .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
   border: none;
+}
+
+.logo {
+  width: 100%;
 }
