--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,34 +1,22 @@
-<h2>{{jobs.job.text}}</h2>
+
 <div class="row">
-  <div class="col-sm-8">
-    <div class="form-group">
-      <label for="search-input" class="sr-only">Pesquisar por tarefa</label>
-      <div class="input-group">
-        <div class="input-group-addon"><span class="glyphicon glyphicon-search"></span></div>
-        <input type="text" id="search-input" ng-model="search" class="form-control">
-      </div>
+  <div class="col-sm-4 col-sm-offset-8">
+
+    <div class="form-group has-feedback">
+      <input type="text" class="form-control" id="inputSuccess2" aria-describedby="inputPesquisarStatus" placeholder="Pesquisar..." ng-model="Jobs.search">
+      <span class="glyphicon glyphicon-search form-control-feedback" aria-hidden="true"></span>
+      <span id="inputPesquisarStatus" class="sr-only">Termo da pesquisa</span>
     </div>
-  </div>
-  <div class="col-sm-4">
-    <div class="form-group">
-      <label for="search-status" class="sr-only">Pesquisar por status</label>
-      <select class="form-control">
-        <option>Ready</option>
-        <option>Failed</option>
-      </select>
-    </div>
+
   </div>
 </div>
-<table class="table table-hover table-dark">
-  <tr ng-repeat="task in jobs.job.tasks | filter:search">
-    <td>
-      {{task.id}}
-    </td>
-    <td>
-      {{task.text}}
-    </td>
-    <td>
-      {{task.taskState}}
-    </td>
-  </tr>
-</table>
+<div class="tasks">
+
+  <a href="#/tasks/{{job.id}}" class="task-link" ng-repeat="job in Jobs.jobs | filter:Jobs.search">
+    <div class="task job">
+      <div class="task-status task-status-default">{{job.readytasks}} tarefas prontas</div>
+      {{job.name}}
+    </div>
+  </a>
+
+</div>
