Fix jobs without friendly names

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -15,7 +15,7 @@
   <a href="#/tasks/{{job.id}}" class="task-link" ng-repeat="job in Jobs.jobs | filter:Jobs.search">
     <div class="task job">
       <div class="task-status task-status-default">{{job.readytasks}} tarefas prontas</div>
-      {{job.name}}
+      {{(job.name) ? job.name : job.id}}
     </div>
   </a>
 
