--- a/app/views/tasks.html
+++ b/app/views/tasks.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-8">
     <div class="job-title">
-      {{Tasks.job.name}}
+      {{(Tasks.job.name) ? Tasks.job.name : Tasks.job.id}}
     </div>
   </div>
   <div class="col-sm-4">
