--- a/app/views/main.html
+++ b/app/views/main.html
@@ -12,11 +12,12 @@
 </div>
 <div class="tasks">
 
-  <a href="#/tasks/{{job.id}}" class="task-link" ng-repeat="job in Jobs.jobs | filter:Jobs.search">
-    <div class="task job">
+  <div class="task job" id="container-{{job.id}}" ng-repeat="job in Jobs.jobs | filter:Jobs.search">
+    <a href="#/tasks/{{job.id}}" class="task-link">
       <div class="task-status task-status-default">{{job.readytasks}} ready tasks</div>
       {{(job.name) ? job.name : job.id}}
-    </div>
-  </a>
+    </a>
+    <div class="task-actions"><button class="btn btn-sm btn-danger" ng-click="Jobs.stopJob(job.id);">Stop</button></div>
+  </div>
 
 </div>
