--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -119,13 +119,19 @@ footer {
 }
 
 .task-actions {
+  width: 120px;
   float: right;
   padding: 6px;
   margin: -11px 15px 0 -17px;
-  border-top-left-radius: $border-radius-base;
-  border-bottom-left-radius: $border-radius-base;
+  border-top-right-radius: $border-radius-base;
+  border-bottom-right-radius: $border-radius-base;
   color: #FFF;
   font-weight: bold;
+  border-left: solid 2px $gray-light;
+}
+
+.task-actions .btn{
+  background: none;
 }
 
 .job-title {
