--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,22 +1,23 @@
-
 <div class="row">
-  <div class="col-sm-4 col-sm-offset-8">
-
+  <div class="col-sm-8">
+    <div>
+      <input onchange="angular.element(this).scope().fileChanged(this)" type="file" accept="*" />
+    </div>
+  </div>
+  <div class="col-sm-4">
     <div class="form-group has-feedback">
-      <input type="text" class="form-control" id="inputSuccess2" aria-describedby="inputPesquisarStatus" placeholder="Pesquisar..." ng-model="Jobs.search">
+      <input type="text" class="form-control" id="inputSuccess2" aria-describedby="inputPesquisarStatus" placeholder="Pesquisar..."
+        ng-model="search">
       <span class="glyphicon glyphicon-search form-control-feedback" aria-hidden="true"></span>
       <span id="inputPesquisarStatus" class="sr-only">Termo da pesquisa</span>
     </div>
-
   </div>
 </div>
 <div class="tasks">
-
-  <a href="#/tasks/{{job.id}}" class="task-link" ng-repeat="job in Jobs.jobs | filter:Jobs.search">
+  <a href="/#!/tasks/{{job.id}}" class="task-link" ng-repeat="job in jobs | filter:search">
     <div class="task job">
       <div class="task-status task-status-default">{{job.readytasks}} ready tasks</div>
       {{(job.name) ? job.name : job.id}}
     </div>
   </a>
-
 </div>
