--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -39,9 +39,9 @@ body {
 }
 
 .top-bar {
-  background: -moz-linear-gradient(left, #e3a94b 0%, #cc5b4f 100%);
-  background: -webkit-linear-gradient(left, #e3a94b 0%,#cc5b4f 100%);
-  background: linear-gradient(to right, #e3a94b 0%,#cc5b4f 100%);
+  background: -moz-linear-gradient(left, #64b5f6 0%, #003c8f 100%);
+  background: -webkit-linear-gradient(left, #64b5f6 0%, #003c8f 100%);
+  background: linear-gradient(to right, #64b5f6 0%, #003c8f 100%);
   height: 30px;
 }
 
@@ -51,10 +51,10 @@ footer {
   color: #FFF;
   text-align: center;
   font-size: $font-size-small;
-  background: #e3a94b;
-  background: -moz-linear-gradient(left, #e3a94b 0%, #cc5b4f 100%);
-  background: -webkit-linear-gradient(left, #e3a94b 0%,#cc5b4f 100%);
-  background: linear-gradient(to right, #e3a94b 0%,#cc5b4f 100%);
+  background: #64b5f6;
+  background: -moz-linear-gradient(left, #64b5f6 0%, #003c8f 100%);
+  background: -webkit-linear-gradient(left, #64b5f6 0%, #003c8f 100%);
+  background: linear-gradient(to right, #64b5f6 0%, #003c8f 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e3a94b', endColorstr='#cc5b4f',GradientType=1 );
 
   a {
